# mpump

./: .gitignore  GENRES.md  README.md  devices.py  index.html  keys.py  main.py  manifest.json  mpump.py  mpump_ui.py  patterns.py  pyproject.toml  requirements.txt  scanner.py  sequencer.py  shots_github  shots_github.pub
assets/: index-0Y5NE2XI.js  index-B9zkhqhN.js  index-BKViHrMJ.js  index-BWRg9_Tv.js  index-BY1-dNSa.js  index-BmBViKrG.js  index-BpfjGW9e.css  index-BySeBhgs.css  index-Bz_tsScY.css  index-C63tZCb5.css  index-CPHkudg2.js  index-CUGd5nr-.js  index-CWCueS13.css  index-CixpS20f.js  index-DA-joEWr.js  index-DLwqzwzS.js  index-PKpCo6c1.css  index-SIEw_xdu.js  index-WWET1Kq7.css  index-WxfFgW0q.js  index-n49Md6rM.css
data/: catalog.json  patterns-j6.json  patterns-t8-bass.json  patterns-t8-drums.json
mpump/: __init__.py  cli.py  devices.py  extras.py  keys.py  patterns.py  patterns_j6.py  patterns_t8.py  scanner.py  sequencer.py  ui.py  ui_cli.py
mpump.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mpump/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
mpump/frontend/public/: manifest.json
mpump/frontend/src/: App.tsx  types.ts
mpump/frontend/src/components/: BassGrid.tsx  (+8 more)
mpump/server/: package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
mpump/server/scripts/: export_patterns.py
mpump/server/src/: App.tsx  file-system-access.d.ts  types.ts
mpump/web/: engine.py  server.py
tests/: test_devices.py  test_keys.py  test_patterns.py  test_patterns_j6.py  test_patterns_t8.py
(+23 files in other folders)
