[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mpump"
version = "0.2.0"
description = "Hot-plug MIDI sequencer for Roland AIRA devices"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["midi", "sequencer", "roland", "aira", "music"]
dependencies = [
    "mido>=1.3.3",
    "python-rtmidi>=1.5.8",
    "textual>=0.47.0",
]

[project.scripts]
mpump = "mpump.cli:main"

[tool.setuptools.packages.find]
include = ["mpump*"]
