[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mpump"
version = "1.2.4"
description = "Hot-plug MIDI sequencer for USB MIDI devices"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["midi", "sequencer", "synth", "drums", "music"]
dependencies = [
    "mido>=1.3.3",
    "python-rtmidi>=1.5.8",
    "textual>=0.47.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
mpump = "mpump.cli:main"
mpump-web = "mpump.web.server:main"

[tool.setuptools.packages.find]
include = ["mpump*"]
